--- a/app/public/index.html
+++ b/app/public/index.html
@@ -26,6 +26,7 @@
 
     <!-- for search multiselect -->
     <link rel="stylesheet" href="bootstrap-multiselect.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <title>petConnect</title>
 
 
