--- a/app/public/index.html
+++ b/app/public/index.html
@@ -27,6 +27,11 @@
     <!-- for search multiselect -->
     <link rel="stylesheet" href="bootstrap-multiselect.css" type="text/css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Estonia&family=Questrial&display=swap" rel="stylesheet">
+
+
     <title>petConnect</title>
 
 
