--- a/app/public/index.html
+++ b/app/public/index.html
@@ -34,7 +34,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Estonia&family=Questrial&display=swap" rel="stylesheet">
 
 
-    <title>petConnect</title>
+    <title>Pet Connect</title>
 
     <!-- for font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
